other/rec-req/require-emptydir-requests-limits/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - image: busybox:1.35
        name: busybox-init
        volumeMounts:
        - mountPath: /mnt/vol
          name: vol
        resources:
          requests:
            ephemeral-storage: "2Gi"
          limits:
            ephemeral-storage: "2Gi"
      - image: busybox:1.35
        name: busybox02-init
        volumeMounts:
        - mountPath: /mnt/foo
          name: foo-host
      containers:
      - image: busybox:1.35
        name: busybox
        volumeMounts:
        - mountPath: /mnt/foo
          name: foo
      - image: busybox:1.35
        name: busybox02
        resources:
          requests:
            ephemeral-storage: "2Gi"
          limits:
            ephemeral-storage: "2Gi"
        volumeMounts:
        - mountPath: /mnt/vol
          name: vol
      volumes:
      - name: vol
        emptyDir: {}
      - name: foo
        emptyDir:
          sizeLimit: 200Mi
      - name: foo-host
        hostPath:
          path: /var/foo
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - image: busybox:1.35
            name: busybox-init
            volumeMounts:
            - mountPath: /mnt/vol
              name: vol
            resources:
              requests:
                ephemeral-storage: "2Gi"
              limits:
                ephemeral-storage: "2Gi"
          - image: busybox:1.35
            name: busybox02-init
            volumeMounts:
            - mountPath: /mnt/foo
              name: foo
          containers:
          - image: busybox:1.35
            name: busybox
            volumeMounts:
            - mountPath: /mnt/foo
              name: foo
          - image: busybox:1.35
            name: busybox02
            resources:
              requests:
                ephemeral-storage: "2Gi"
              limits:
                ephemeral-storage: "2Gi"
            volumeMounts:
            - mountPath: /mnt/vol
              name: vol
          volumes:
          - name: vol
            emptyDir: {}
          - name: foo
            emptyDir:
              sizeLimit: 200Mi
          - name: foo-host
            hostPath:
              path: /var/foo
          restartPolicy: OnFailure
