other/rec-req/require-emptydir-requests-limits/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-emptydir-requests-and-limits
status:
  ready: true
